2012-05-25  Joshua Bell  <jsbell@chromium.org>

        [Chromium] Remove 6 incorrect baselines from http://trac.webkit.org/changeset/117821/

        Unreviewed gardening.

        * platform/chromium-win/fast/viewport/viewport-126-expected.txt: Removed.
        * platform/chromium-win/fast/viewport/viewport-127-expected.txt: Removed.
        * platform/chromium-win/fast/viewport/viewport-65-expected.txt: Removed.
        * platform/chromium-win/fast/viewport/viewport-82-expected.txt: Removed.
        * platform/chromium-win/fast/viewport/viewport-84-expected.txt: Removed.
        * platform/chromium-win/fast/viewport/viewport-87-expected.txt: Removed.

2012-05-25  Jessie Berlin  <jberlin@apple.com>

        Web Timing is not enabled on Windows
        https://bugs.webkit.org/show_bug.cgi?id=42435

        Add the fast/performance tests to the Windows Skipped list.

        * platform/win/Skipped:

2012-05-25  Jessie Berlin  <jberlin@apple.com>

        File API is not yet supported on Windows
        https://bugs.webkit.org/show_bug.cgi?id=37957

        Add platform specific results for a test that attempts to use the FileReaderConstructor.

        * platform/win/fast/dom/call-a-constructor-as-a-function-expected.txt: Added.

2012-05-25  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r118395.
        http://trac.webkit.org/changeset/118395
        https://bugs.webkit.org/show_bug.cgi?id=87526

        Breaking sites including GMail and Yahoo mail (Requested by
        jsbell on #webkit).

        * fast/css/clear-float-sibling-expected.html: Removed.
        * fast/css/clear-float-sibling.html: Removed.

2012-05-25  Jessie Berlin  <jberlin@apple.com>

        Skip the Network Information tests on Windows.

        * platform/win/Skipped:

2012-05-25  Joshua Bell  <jsbell@chromium.org>

        [Chromium] Remove 2 incorrect rebaselines from http://trac.webkit.org/changeset/117818/

        Unreviewed gardening.
